app/static/styles/womens_activism.css
/* Home Defaults */
h1 {
    margin: 0;
    padding: 0;
    font-size: 50px;
    font-weight: lighter;
}

/* Header */

#header-top {
    text-align: center;
}

#logo {
    max-width: 183px;
    margin: 40px 0;
}

.navbar-nav {
    width: 100%;
    text-align: center;
    background: #d29f13;
}
.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
    background-color: #e0b040 !important;
}
.icon-bar {
    background-color: #ffffff !important;
}

.navbar-collapse.collapse li {
    float: none;
    display: inline-block;
}

.navbar-collapse.collapse.in li {
    float: initial;
    display: initial;
    width: 100%;
}

.navbar-collapse.collapse.in {
    border: 0;
    margin-top: 3px;
}

.navbar-collapse.collapsing {
    border: 0;
    margin-top: 3px;
}

.navbar-collapse {
    padding: 0;
}

.navbar {
    min-height: 40px;
    height: 40px;
    margin-bottom: 0;
    border: 0;
    border-radius: 0;
    z-index: 9999;
}

.navbar-nav {
    margin: 0 !important;
}

.navbar-nav > li > a {
    padding-top: 10px;
    padding-bottom: 10px;
    text-transform: uppercase;
    color: #ffffff !important;
    font-weight: 600;
}

.navbar-default {
    background: #d29f13;
}

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
    background: #e0b040;
}

.navbar-toggle {
    margin-top: 3px;
    margin-bottom: 0;
}

.navbar-toggle:hover {
    background-color: #e0b040 !important;
}

/* Fonts */

h1, h2, h3, h4, h5, h6 {
    font-family: 'Open Sans', sans-serif;
    -webkit-font-smoothing: antialiased;
}

p, div {
    font-family: 'Open Sans', sans-serif;
    -webkit-font-smoothing: antialiased;
}

/* Hero */

#hero {
    background: url('./img/womens_activism_hero_image.png');
    background-size: cover;
    background-color: rgb(89, 49, 95);
    min-height: 380px;
    text-align: center;
    color: #ffffff;
    height: 100%;
    width: 100%;
    display: table;
}

@media (min-width: 768px) {
    #hero {
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 0;
        margin-bottom: 0;
    }
}

#hero-content {
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    padding-top: 40px;
    padding-bottom: 40px;
}

#hero h1 {
    font-weight: 300;
    font-size: 50px;
    padding: 0;
    margin: 0 15px 15px 15px;
}

#hero p {
    margin: 0 0 10px 0;
    padding: 0 15px;
}

#hero-collect {
    font-weight: normal;
}

#hero .btn {
    background: none;
    font-size: 20px;
    color: white;
    border-radius: 0;
    border-width: 2px;
    margin-top: 20px;
    border-color: white;
    padding: 12px 40px;
    transition: background 0.2s ease;
}

#hero .btn:hover {
    background: #ffffff;
    color: rgb(89, 49, 95);
}

/* Home Stories */

.home-wrapper {
    margin-top: 75px;
    margin-bottom: 75px;
    text-align: center;
}

.home-count {
    color: #d29f13;
    font-weight: normal;
    padding-left: 5px;
    padding-right: 5px;
}

#home-stories h2 {
    color: #c0c0c0;
    font-weight: lighter;
    font-size: 36px;
    margin-top: 25px;
    margin-bottom: 80px;
}

#home-stories a {
    color: inherit;
}

#home-stories a:hover {
    text-decoration: none;
}

.home-story {
    margin: 15px 0;
}

.home-story-content {
    margin: 0 3px;
    border: 1px solid #d9d9d9;
    height: 381px;
    word-wrap: break-word;
}

.home-story-content h4 {
    padding: 25px 3px 10px 0;
    word-wrap: break-word;
}

.home-story-content p {
    padding: 0 15px;
    font-size: 13px;
}

.img-mask {
    width: 180px;
    height: 180px;
    border-radius: 50%;
    overflow: hidden;
    margin: 35px auto;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.hearts-div {
    margin: 0 0 35px 0;
}

.hearts-div .glyphicon-heart {
    font-size: 11px;
    color: #d29f13;
}

.hearts-div .hearts-num {
    font-size: 12px;
    font-weight: 500;
    font-style: italic;
    color: #d29f13;
}

#home-view-all-btn {
    background: none;
    font-size: 20px;
    color: #59315f;
    border-radius: 0;
    border-width: 2px;
    margin-top: 40px;
    border-color: #59315f;
    padding: 12px 40px;
    transition: background 0.2s ease;
}

#home-view-all-btn:hover {
    background: #59315f;
    color: #ffffff;
}
#flash-messages {
    background-color: #673c74;
}
#flash-messages .alert {
    margin: 20px auto;
    width: 90%;
    max-width: 600px;
}

/* Give Section */

#give-jumbotron {
    background-color: #f2f2f2;
    min-height: 380px;
    text-align: center;
    color: #34294f;
    height: 100%;
    width: 100%;
    display: table;
    margin: 0;
}

#give-content {
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    padding-top: 40px;
    padding-bottom: 40px;
}

#give-jumbotron h1 {
    padding: 0 20px;
    font-size: 50px;
}

@media (min-width: 768px) {
    #give-jumbotron {
        padding-top: 0;
        padding-bottom: 0;
        margin-top: 0;
        margin-bottom: 0;
    }
}

@media (min-width: 1170px) {
    #give-jumbotron h1 {
        padding: 0 200px;
    }
}

#home-give-btn {
    background: none;
    font-size: 30px;
    color: #59315f;
    border-radius: 0;
    border-width: 2px;
    margin-top: 50px;
    border-color: #59315f;
    max-width: 400px;
    width: 80%;
    padding: 15px 0;
    transition: background 0.2s ease;
}

#home-give-btn:hover {
    background: #59315f;
    color: #ffffff;
}

/* BW Suffrage Section */

#bws-jumbotron {
    background-color: #59315f;
    text-align: center;
    color: #ffffff;
    height: 100%;
    width: 100%;
}

#bws-content {
    height: 100%;
    vertical-align: middle;
    margin: 80px 0;
    text-align: left;
}

#bws-image-mask {
    width: 250px;
    height: 250px;
    background-size: cover;
    background-position: center;
    border-radius: 50%;
    margin: 0 auto;
}

#bws-h1 {
    font-size: 35px;
    margin-top: 48px;
}
/* ... */

